# alcohol-label-verification

./: .env.example  .gitignore  .vercelignore  APPROACH.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: classify.py  clients.py  errors.py  extraction.py  fields.py  main.py  observability.py  prompts.py  schemas.py  security.py  validation.py
app/static/: app.js  how-to.html  index.html  styles.css  theme-init.js
archive/evals/: run_baseline.txt  run_decision-procedure.txt  run_full_0504.txt  run_rules-and-negatives.txt  run_surgical-minimal.txt  run_ttb.txt  run_ttb2.txt  run_ttb3.txt  run_winner_patched.txt
archive/evals/candidates/: cand_decision-procedure.txt  cand_rules-and-negatives.txt  cand_surgical-minimal.txt
backend/: .env.example  __init__.py  gemini_test.py  main_gemini.py  main_openai.py  requirements.txt
backend/app/: clients.py  errors.py  extraction.py  fields.py  main.py  prompts.py  schemas.py  security.py  uploads.py  validation.py
backend/app/static/: app.js  how-to.html  index.html  styles.css  theme-init.js
backend/app/static/fonts/: LICENSE.txt
backend/evals/: .gitignore  README.md  __init__.py  cases.json  run_eval.py  score.py
backend/scripts/: gemini_smoke_test.py
backend/tests/: test_api.py  test_validation.py
docs/: APPROACH.md
evals/: README.md  cases.json  render.py  run_eval.py  score.py
tests/: test_api.py  test_classify.py  test_platform.py  test_validation.py
tools/: make_pdfs.py
