[project]
name = "treasury-doge-alcohol-label-verification"
version = "0.1.0"
description = "FastAPI prototype for alcohol label verification."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "google-genai==2.8.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "uvicorn==0.49.0",
]

[project.scripts]
app = "backend.app.main:app"
