[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "treasury-doge-alcohol-label-verification"
version = "0.1.0"
description = "FastAPI prototype for alcohol label verification."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.136.3",
  "google-genai==2.8.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "uvicorn==0.49.0",
]

[project.optional-dependencies]
# pillow renders the eval harness's synthetic labels (evals/render.py); dev-only —
# kept out of requirements.txt so the Vercel runtime bundle stays lean.
dev = ["pillow==12.2.0", "ruff==0.14.4"]

# Only the app ships; tests/evals/scripts are repo tooling, not package code.
[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/venv", "**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]  # E501: long prompt strings; B008: FastAPI Depends()/Form() in defaults
